# mecla

./: Cargo.toml  README.md
.cargo/: config.toml
src/: config.rs  filesystem.rs  main.rs  metadata.rs  naming.rs  stats.rs
