[package]
name = "mecla"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
rayon = "1.8"
indicatif = "0.17"
log = "0.4"
env_logger = "0.11"
atty = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true